<resources>

    <!-- App Strings -->
    <string name="app_name" translatable="false">BookWorm</string>

    <!-- Menu Item Strings -->
    <string name="action_settings" translatable="true">Settings</string>
    <string name="new_book" translatable="true">New Book</string>

    <!-- UI Elements -->
    <!-- Main Screen -->


    <!-- Placeholder Texts -->
    <!-- Main Screen -->

    <string name="placeholder_book_title" translatable="false">Book Title</string>
    <string name="placeholder_year_of_publication" translatable="false">Year of Publication</string>
    <string name="placeholder_genre" translatable="false">Genre</string>
    <string name="placeholder_author" translatable="false">Author</string>
    <string name="title_activity_add_view">AddView</string>

    <!-- Add View Screen -->

    <string name="label_for_book_title" translatable="true">Book Title:</string>
    <string name="label_for_year_of_publication" translatable="true">Year of Publication:</string>
    <string name="label_for_genre" translatable="true">Genre:</string>
    <string name="label_for_author" translatable="true">Author</string>

    <!-- Add View Screen validators -->

    <string name="book_title_error" translatable="true">Must have a Book Title!</string>
    <string name="genre_error" translatable="true">Must have a Genre!</string>
    <string name="author_error" translatable="true">Must have an Author!</string>
    <string name="year_of_publication_error" translatable="true">Must have a 4 digit Year of Publication!</string>

    <string name="general_error" translatable="true">All the fields must be valid before saving!</string>

    <string name="added_book" translatable="true">Book added successfully!</string>


    <!-- BookRecyclerView -->
    <string name="delete_book" translatable="true">Are you sure you want to delete this book?</string>
    <string name="delete" translatable="true">DELETE</string>
    <string name="book_deleted" translatable="true">The book has been deleted successfully!</string>
    <string name="title_activity_view_book">ViewBook</string>

</resources>
