<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.khanal.bookworm.ViewBook"
    tools:showIn="@layout/activity_view_book">

    <TextView
        android:id="@+id/book_title"
        android:text="@string/placeholder_book_title"
        style="@style/viewbook_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/year_of_publication"
        android:text="@string/placeholder_year_of_publication"
        style="@style/viewbook_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_title"/>

    <TextView
        android:id="@+id/genre"
        android:text="@string/placeholder_genre"
        style="@style/viewbook_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/year_of_publication"/>

    <TextView
        android:id="@+id/author"
        android:text="@string/placeholder_author"
        style="@style/viewbook_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genre"/>

</RelativeLayout>
